--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                     Huyền Trang </h2>
             </div>
             <div class="time" data-aos="fade-up" data-aos-duration="3000">
-                <span class="invitation_day">25</span>
+                <span class="invitation_day">26</span>
                 .
                 <span class="invitation_month">1</span>
                 .
@@ -810,7 +810,7 @@
 
     <section id="countdown-secton" class="uk-background-cover uk-section uk-section-large uk-text-center uk-light" style="background-image:url(images/Tw9ajzLCKNqAzQ9M9NZT3Wo0cnvwytHLVF4YoUvd.jpg); margin-top: 200px;padding-top: 200px;">
         <div class="uk-container">
-            <p class="uk-text-center">CÙNG ĐẾM NGƯỢC THỜI GIAN</p>
+            <p class="uk-text-center" style="color:red;">CÙNG ĐẾM NGƯỢC THỜI GIAN</p>
             
             <svg class="heartbeat" width="34" height="34" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="red" d="M16.5 13.287c-2.475-2.716-5.5-.712-5.5 2.112c0 2.56 1.814 4.035 3.358 5.292l.044.036l.427.35c.571.475 1.121.923 1.671.923s1.1-.448 1.671-.923C19.789 19.73 22 18.224 22 15.399c0-.927-.326-1.767-.853-2.38c-1.075-1.251-2.985-1.556-4.647.268Z">
@@ -822,25 +822,25 @@
                 <div>
                     <div class="uk-countdown-number uk-countdown-days uk-padding-small uk-flex uk-flex-center uk-flex-middle blur-bg uk-border-rounded text-white">
                     </div>
-                    <div class="uk-countdown-label uk-margin-small uk-text-center ">Ngày</div>
+                    <div class="uk-countdown-label uk-margin-small uk-text-center " style="color:red;">Ngày</div>
                 </div>
 
                 <div>
                     <div class="uk-countdown-number uk-countdown-hours uk-padding-small uk-flex uk-flex-center uk-flex-middle blur-bg uk-border-rounded text-white">
                     </div>
-                    <div class="uk-countdown-label uk-margin-small uk-text-center ">Giờ</div>
+                    <div class="uk-countdown-label uk-margin-small uk-text-center " style="color:red;">Giờ</div>
                 </div>
 
                 <div>
                     <div class="uk-countdown-number uk-countdown-minutes uk-padding-small uk-flex uk-flex-center uk-flex-middle blur-bg uk-border-rounded text-white">
                     </div>
-                    <div class="uk-countdown-label uk-margin-small uk-text-center ">Phút</div>
+                    <div class="uk-countdown-label uk-margin-small uk-text-center " style="color:red;">Phút</div>
                 </div>
 
                 <div>
                     <div class="uk-countdown-number uk-countdown-seconds uk-padding-small uk-flex uk-flex-center uk-flex-middle blur-bg uk-border-rounded text-white">
                     </div>
-                    <div class="uk-countdown-label uk-margin-small uk-text-center ">Giây</div>
+                    <div class="uk-countdown-label uk-margin-small uk-text-center " style="color:red;">Giây</div>
                 </div>
             </div>
 
